fix(hero-card-notification): fix link not clickable in notification
fix link not being clickable in the notification message, because of the overlay covering it

--- a/projects/canopy/src/styles/variables/components/_hero.scss
+++ b/projects/canopy/src/styles/variables/components/_hero.scss
@@ -2,9 +2,9 @@
   --hero-padding: var(--space-sm);
   --hero-color: var(--color-white);
   --hero-bg-color: var(--color-super-blue-dark);
-  --hero-overlay-bg-color: var(--color-black);
   --hero-rule-color: rgba(255, 255, 255, 0.2);
   --hero-bg-alpha: 0.1;
+  --hero-overlay-bg-color: rgba(0, 0, 0, var(--hero-bg-alpha));
 
   --hero-link-color: var(--hero-color);
   --hero-link-hover-color: var(--hero-color);
